docs(readme): simplify [skip ci]

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,61 +27,50 @@ knitr::opts_chunk$set(
 [![Docs dev version](https://img.shields.io/badge/docs-dev-blue.svg)](https://pola-rs.github.io/r-polars)
 <!-- badges: end -->
 
-The **polars** package for R gives users access to [a lightning
-fast](https://duckdblabs.github.io/db-benchmark/) Data Frame library written in
-Rust. [Polars](https://www.pola.rs/)' embarrassingly parallel execution, cache
-efficient algorithms and expressive API makes it perfect for efficient data
-wrangling, data pipelines, snappy APIs, and much more besides. Polars also supports
-"streaming mode" for out-of-memory operations. This allows users to analyze
-datasets many times larger than RAM.
+## Overview
 
-Examples of common operations:
+Polars is a DataFrame interface on top of an OLAP Query Engine implemented in Rust using
+[Apache Arrow Columnar Format](https://arrow.apache.org/docs/format/Columnar.html) as the memory
+model.
 
-- read CSV, JSON, Parquet, and other file formats;
-- filter rows and select columns;
-- modify and create new columns;
-- group by and aggregate;
-- reshape data;
-- join and concatenate different datasets;
-- sort data;
-- work with dates and times;
-- handle missing values;
-- use the lazy execution engine for maximum performance and
-  memory-efficient operations
+- Lazy | eager execution
+- Multi-threaded
+- SIMD
+- Query optimization
+- Powerful expression API
+- Hybrid Streaming (larger-than-RAM datasets)
+- Rust | Python | NodeJS | R | ...
 
-Note that this package is rapidly evolving and there are a number of breaking
-changes at each version. Be sure to check the [changelog](https://pola-rs.github.io/r-polars/NEWS.html)
-when updating `polars`.
+This `{polars}` R package provides the R bindings for Polars.
 
-## Install
+To learn more, read the [online documentation](https://pola-rs.github.io/r-polars/).
 
-The recommended way to install this package is via R-multiverse:
+## Installation
+
+The recommended way to install this package is from the R-multiverse community repository:
 
 ```r
 Sys.setenv(NOT_CRAN = "true")
 install.packages("polars", repos = "https://community.r-multiverse.org")
 ```
 
-[The "Install" vignette](https://pola-rs.github.io/r-polars/vignettes/install.html) (`vignette("install", "polars")`)
-gives more details on how to install this package and other ways to install it.
+## Usage
 
-## Quickstart example
-
-To avoid conflicts with other packages and base R function names, **polars**'s
-top level functions are hosted in the `pl` namespace, and accessible via the
+To avoid conflicts with other packages and base R function names, `{polars}`'s
+top level functions are hosted in the `pl` environment, and accessible via the
 `pl$` prefix.
 This means that `polars` queries written in Python and in R are very similar.
 
 For example, rewriting the Python example from <https://github.com/pola-rs/polars> in R:
 
 ```{r}
-library(polars)
+library(neopolars) # TODO: rename to polars
 
 df <- pl$DataFrame(
   A = 1:5,
   fruits = c("banana", "banana", "apple", "apple", "banana"),
   B = 5:1,
-  cars = c("beetle", "audi", "beetle", "beetle", "beetle")
+  cars = c("beetle", "audi", "beetle", "beetle", "beetle"),
 )
 
 # embarrassingly parallel execution & very expressive query language
@@ -93,41 +82,19 @@ df$sort("fruits")$select(
   pl$col("A")$filter(pl$col("B") > 2)$sum()$over("cars")$alias("sum_A_by_cars"),
   pl$col("A")$sum()$over("fruits")$alias("sum_A_by_fruits"),
   pl$col("A")$reverse()$over("fruits")$alias("rev_A_by_fruits"),
-  pl$col("A")$sort_by("B")$over("fruits")$alias("sort_A_by_B_by_fruits")
+  pl$col("A")$sort_by("B")$over("fruits")$alias("sort_A_by_B_by_fruits"),
 )
 ```
 
 The [Get Started vignette](https://pola-rs.github.io/r-polars/vignettes/polars.html) (`vignette("polars")`) provides
-a more detailed introduction to **polars**.
+a more detailed introduction.
 
 ## Extensions
 
-While one can use **polars** as-is, other packages build on it to
+While one can use polars as-is, other packages build on it to
 provide different syntaxes:
 
-- [polarssql](https://rpolars.github.io/r-polarssql/) provides a **polars**
+- [polarssql](https://rpolars.github.io/r-polarssql/) provides a polars
   backend for [DBI](https://dbi.r-dbi.org/) and [dbplyr](https://dbplyr.tidyverse.org/).
 - [tidypolars](https://tidypolars.etiennebacher.com/) allows one to
-  use the [tidyverse](https://www.tidyverse.org/) syntax while using the power of **polars**.
-
-## Getting help
-
-The online documentation can be found at <https://pola-rs.github.io/r-polars/>.
-
-If you encounter a bug, please file an issue with a minimal reproducible example on
-[GitHub](https://github.com/pola-rs/r-polars/issues).
-
-Consider joining our [Discord](https://discord.com/invite/4UfP5cfBE7) subchannel for
-additional help and discussion.
-
-## Development
-
-The primary developer of the upstream Polars project is Ritchie Vink ([@ritchie46](https://github.com/ritchie46)).
-This R package is maintained by [@eitsupi](https://github.com/eitsupi) and [Etienne Bacher](https://github.com/etiennebacher).
-The original R package (since then rewritten from scratch) was created by Søren Welling ([@sorhawell](https://github.com/sorhawell)).
-
-**'Polars'** is a query engine/syntax for multiple languages. The R specific implementation
-can be referred to as the R API and is derived from the Rust API.
-
-The **polars** package for R is published under the MIT license.
-
+  use the [tidyverse](https://www.tidyverse.org/) syntax while using the power of polars.
