docs(readme): tweak [skip ci]

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,11 +19,12 @@ knitr::opts_chunk$set(
 
 # polars
 
+<!-- TODO: add link to discord -->
+
 <!-- badges: start -->
 [![R-multiverse status](https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fcommunity.r-multiverse.org%2Fapi%2Fpackages%2Fpolars&query=%24.Version&label=r-multiverse)](https://community.r-multiverse.org/polars)
 [![R-universe status badge](https://rpolars.r-universe.dev/badges/polars)](https://rpolars.r-universe.dev)
 [![CRAN status](https://www.r-pkg.org/badges/version/polars)](https://CRAN.R-project.org/package=polars)
-[![Dev R-CMD-check](https://github.com/pola-rs/r-polars/actions/workflows/check.yaml/badge.svg)](https://github.com/pola-rs/r-polars/actions/workflows/check.yaml)
 [![Docs dev version](https://img.shields.io/badge/docs-dev-blue.svg)](https://pola-rs.github.io/r-polars)
 <!-- badges: end -->
 
@@ -42,8 +43,11 @@ model.
 - Rust | Python | NodeJS | R | ...
 
 This `{polars}` R package provides the R bindings for Polars.
+It can be used to convert R DataFrames to Polars DataFrames and vice versa,
+as well as to integrate with other common R packages.
 
-To learn more, read the [online documentation](https://pola-rs.github.io/r-polars/).
+To learn more, read the [online documentation](https://pola-rs.github.io/r-polars/) for this R package,
+and the [user guide](https://docs.pola.rs/) for Python / Rust Polars.
 
 ## Installation
 
@@ -98,3 +102,5 @@ provide different syntaxes:
   backend for [DBI](https://dbi.r-dbi.org/) and [dbplyr](https://dbplyr.tidyverse.org/).
 - [tidypolars](https://tidypolars.etiennebacher.com/) allows one to
   use the [tidyverse](https://www.tidyverse.org/) syntax while using the power of polars.
+
+<!-- TODO: add governance section or something else -->
