docs(readme): update sections

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# polars
+# polars _(R Polars)_
 
 <!-- TODO: add link to discord -->
 
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(
 [![Docs dev version](https://img.shields.io/badge/docs-dev-blue.svg)](https://pola-rs.github.io/r-polars)
 <!-- badges: end -->
 
-## Overview
+Polars R bindings.
 
 Polars is a DataFrame interface on top of an OLAP Query Engine implemented in Rust using
 [Apache Arrow Columnar Format](https://arrow.apache.org/docs/format/Columnar.html) as the memory
@@ -42,14 +42,14 @@ model.
 - Hybrid Streaming (larger-than-RAM datasets)
 - Rust | Python | NodeJS | R | ...
 
-This `{polars}` R package provides the R bindings for Polars.
+This `polars` R package provides the R bindings for Polars.
 It can be used to convert R DataFrames to Polars DataFrames and vice versa,
 as well as to integrate with other common R packages.
 
 To learn more, read the [online documentation](https://pola-rs.github.io/r-polars/) for this R package,
-and the [user guide](https://docs.pola.rs/) for Python / Rust Polars.
+and the [user guide](https://docs.pola.rs/) for Python/Rust Polars.
 
-## Installation
+## Install
 
 The recommended way to install this package is from the R-multiverse community repository:
 
@@ -69,11 +69,13 @@ install.packages('polars', repos = c("https://rpolars.r-universe.dev", "https://
 
 ## Usage
 
-To avoid conflicts with other packages and base R function names, `{polars}`'s
-top level functions are hosted in the `pl` environment, and accessible via the
-`pl$` prefix.
-And, most of the methods for `{polars}` objects should be called with the `$` operator.
+To avoid conflicts with other packages and base R function names, many of `polars`'s
+functions are hosted in the `pl` environment, and accessible via the `pl$` prefix.
+And, most of the methods for `polars` objects should be called with the `$` operator.
 This means that `polars` queries written in Python and in R are very similar.
+Additionally, many functions are intended to match the Python Polars API.
+
+This means that Polars queries written in Python and in R are very similar.
 
 For example, writing the [example from the user guide of Python/Rust](https://docs.pola.rs/#example)
 in R:
@@ -92,7 +94,19 @@ q <- pl$scan_csv(csv_file)$filter(pl$col("Sepal.Length") > 5)$group_by(
 )$agg(pl$all()$sum())
 
 # Execute the query plan and collect the result as a Polars DataFrame
-q$collect()
+df <- q$collect()
+
+df
+```
+
+There are also some functions to manipulate `polars` objects using base R and some popular other packages.
+
+```{r}
+# Subset a Polars DataFrame using the `[` operator
+df[1:2, 1:2]
+
+# Execute a query plan and collect the result as a tibble data frame
+tibble::as_tibble(q)
 ```
 
 ```{r}
@@ -100,17 +114,32 @@ q$collect()
 unlink(csv_file)
 ```
 
-The [Get Started vignette](https://pola-rs.github.io/r-polars/vignettes/polars.html) (`vignette("polars")`) provides
-a more detailed introduction.
+The [Get Started vignette](https://pola-rs.github.io/r-polars/vignettes/polars.html)
+(`vignette("polars")`) provides a more detailed introduction.
 
 ## Extensions
 
-While one can use polars as-is, other packages build on it to
-provide different syntaxes:
+While one can use this package as-is, other packages build on it to
+provide different APIs:
 
 - [polarssql](https://rpolars.github.io/r-polarssql/) provides a polars
   backend for [DBI](https://dbi.r-dbi.org/) and [dbplyr](https://dbplyr.tidyverse.org/).
 - [tidypolars](https://tidypolars.etiennebacher.com/) allows one to
   use the [tidyverse](https://www.tidyverse.org/) syntax while using the power of polars.
 
-<!-- TODO: add governance section or something else -->
+## Maintainers
+
+- [SHIMA Tatsuya](https://github.com/eitsupi)
+- [Etienne Bacher](https://github.com/etiennebacher)
+
+Version 0 of this package was previously maintained by [Søren Havelund Welling](https://github.com/sorhawell).
+<!-- TODO: link to the v0 branch -->
+
+## Acknowledgements
+
+This package is based on the [Polars open source project](https://github.com/pola-rs/polars),
+originally founded by [Ritchie Vink](https://github.com/ritchie46) and developed by many contributors.
+
+## License
+
+MIT @ polars authors
