--- a/vignettes/polars.Rmd
+++ b/vignettes/polars.Rmd
@@ -105,7 +105,7 @@ prefix is very important, as most of the `polars` functions are made available
 via `pl$`:
 
 ```{r}
-library(polars)
+library(neopolars) # TODO: change to polars
 
 pl$Series(name = "a", values = (1:5) * 5)
 
