--- a/README.Rmd
+++ b/README.Rmd
@@ -28,10 +28,9 @@ knitr::opts_chunk$set(
 [![Docs dev version](https://img.shields.io/badge/docs-dev-blue.svg)](https://pola-rs.github.io/r-polars)
 <!-- badges: end -->
 
-Polars is a blazingly fast DataFrame library for manipulating structured data.
-The core is written in Rust.
+Polars is a blazingly fast DataFrame library, written in Rust.
 
-The goal of Polars is to provide a lightning fast DataFrame library that:
+The goal of Polars is to deliver fast, efficient data processing that:
 
 - Utilizes all available cores on your machine.
 - Optimizes queries to reduce unneeded work/memory allocations.
@@ -40,7 +39,7 @@ The goal of Polars is to provide a lightning fast DataFrame library that:
 - Adheres to a strict schema (data-types should be known before running the query).
 
 This `polars` R package provides the R bindings for Polars.
-It can be used to process Polars DataFrames and LazyFrames, convert objects 
+It can be used to process Polars DataFrames and LazyFrames, convert objects
 between Polars and R, and can be integrated with other common R packages.
 
 To learn more, read the [online documentation](https://pola-rs.github.io/r-polars/) for this R package,
