--- a/README.Rmd
+++ b/README.Rmd
@@ -39,8 +39,8 @@ The goal of Polars is to deliver fast, efficient data processing that:
 - Adheres to a strict schema (data-types should be known before running the query).
 
 This `polars` R package provides the R bindings for Polars.
-It can be used to process Polars DataFrames and LazyFrames, convert objects
-between Polars and R, and can be integrated with other common R packages.
+It can be used to process Polars DataFrames and other data structures,
+convert objects between Polars and R, and can be integrated with other common R packages.
 
 To learn more, read the [online documentation](https://pola-rs.github.io/r-polars/) for this R package,
 and the [user guide](https://docs.pola.rs/) for Python/Rust Polars.
