--- a/vignettes/custom-functions.Rmd
+++ b/vignettes/custom-functions.Rmd
@@ -45,13 +45,17 @@ dat$with_columns(
 ## Using `purrr`
 
 `polars` expressions allow one to write their own functions, but it is sometimes necessary to use functions that already exist in other R packages.
-When this is the case, one should keep in mind that applying those functions that are external to `polars` will limit `polars`' strengths.
+When this is the case, one should keep in mind that applying functions that are external to `polars` will limit `polars`' strengths.
 In particular, `polars` is fast in part because it is able to detect the various transformations applied to the data and run them in parallel or cache them so that only the strict minimum of computations is made.
 Using `polars` expressions will also allow the code to be run in streaming mode, allowing for larger-than-memory data.
 When one uses functions that `polars` doesn't natively know, those benefits are lost.
 This is the reason why it is better to use `polars` expressions in your own functions if you can.
 
 To apply an external function to a `polars` object, one must convert this object to R, apply the function, and then convert it back to `polars`.
+If you come from Python Polars, this is a big difference.
+In Python Polars, several functions (for instance `map_batches()` and `map_elements()`) allow one to pass custom functions.
+Those are not in the R implementation because we cannot guarantee that they will function correctly in streaming mode.
+
 Note that when you convert your `polars` object to R, you may run out of memory if your object is a LazyFrame that is too big to fit in memory once collected.
 Another crucial point is that we want the R function to run as fast as possible on the data.
 One way to do that is to take advantage of `purrr` to run the function [in parallel](https://purrr.tidyverse.org/dev/reference/parallelization.html).
@@ -66,7 +70,7 @@ dat |>
   as.list(as_series = FALSE) |>
   purrr::map(
     \(s) {
-      stats::rnorm(s)
+      scale(s)[, 1]
     },
     .parallel = TRUE
   ) |>
@@ -83,7 +87,7 @@ dat |>
   purrr::map_at(
     c("carb", "mpg"),
     \(s) {
-      stats::rnorm(s)
+      scale(s)[, 1]
     },
     .parallel = TRUE
   ) |>
@@ -95,7 +99,7 @@ dat |>
 ## Using `mirai`
 
 `mirai` is the package that is used by `purrr` in the background to run functions in parallel.
-It also provides functions mimicking the `purrr` API, such as `mirai_map()`:
+It also provides some functions mimicking the `purrr` API, such as `mirai_map()`:
 
 ```{r}
 
@@ -103,13 +107,18 @@ dat |>
   as.list(as_series = FALSE) |>
   mirai::mirai_map(
     \(s) {
-      stats::rnorm(s)
+      scale(s)[, 1]
     }
   ) |>
   _[] |>
   as_polars_df()
 ```
 
-<!-- TODO: AFAIK (etienne) there's no equivalent to `purrr::map_at()`? -->
+<!-- Etienne: TODO? I don't know if this is correct. "Using `mirai` directly also allows more advanced usage, such as executing a query on a remote machine. This is not in the scope of this vignette and is addressed in [vignette to write]()". -->
 
-<!-- Using `mirai` directly also allows more advanced usage, such as executing a query on a remote machine. This is not in the scope of this vignette and is addressed in [vignette to write](). -->
+## Conclusion
+
+Using custom functions is sometimes necessary when processing data.
+`polars` allows one to chain many expressions, thus making it possible to create custom functions that benefit from all its optimizations, such as parallelism and streaming mode.
+
+While using `polars` expressions is the recommended way to write custom functions, one can also apply functions by converting the DataFrame or LazyFrame to R first, and then use `purrr` or `mirai` to run functions in parallel.
