--- a/vignettes/custom-functions.Rmd
+++ b/vignettes/custom-functions.Rmd
@@ -25,7 +25,7 @@ This vignette details several ways to do that in the most computationally effici
 ## Writing functions using `polars` expressions
 
 One of `polars`' biggest strength is the composability of expressions.
-It is very easy to chain multiple functions to create custom functions.
+Chain multiple functions to create custom functions is quite simple.
 For example, `polars` doesn't provide a function to standardize a variable out-of-the-box, but we could definitely create one using expressions:
 
 ```{r}
